--- a/installation.html
+++ b/installation.html
@@ -52,17 +52,19 @@
                                         <dd>
                                             <p>First, we want to install Homebrew, which is a package that helps with installing Python. Type the following into terminal, which is from the website http://brew.sh/.</p>
                                             <pre><code>/bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install.sh)"</code></pre>
-                                            <p>Accept if terminal prompts you for installation. The installation would take a few minutes.</p>
-                                            <p>Terminal would also prompt you for your password to install onto your device. Enter your macbook's password and press return.
-                                                Keep in mind that nothing should show up when you are typing your password for protection.
-                                            </p>
+											<p>Terminal would also prompt you for your password to install onto your device. Enter your macbook's password and press return.
+												Keep in mind that <u>nothing should show up</u> when you are typing your password for protection.
+											</p>
+											<p>Accept if terminal prompts you for installation. The installation would take a few minutes.</p>
+                                            
                                         </dd>
                                         <dt>Step 3</dt>
                                         <dd>
                                             <p>Now that Homebrew has finished installing, we want to install Python with Homebrew.
                                                Type in the following in the Terminal:
                                             </p>
-                                            <pre><code>brew install python3</code></pre>
+											<pre><code>brew install python3</code></pre>
+											<p>The installation will take another couple minutes</p>
                                         </dd>
                                         <dt>Step 4</dt>
                                         <dd>
@@ -91,7 +93,28 @@
 											<p>Type in 'Python' into the search bar and install it</p>
 											<span class="image object"><img src="images/python_extension.png" alt="" /></span>
 										</dd>
-                                    </dl>
+										<dt>Step 8</dt>
+										<dd>
+											<p>Check that the bottom left corner indicates that you are running Python 3.7.X</p>
+											<span class="image object"><img src="images/python_version.png" alt="" /></span>
+										</dd>
+										<dt>Step 9</dt>
+										<dd>
+											<p>If the version is not 3.7.X, click on it and a pop-up selection screen should come up. From the selection screen, choose
+													the option that is most similar to the following image:</p>
+											<span class="image object"><img src="images/python_version_3.png" width="500" alt="" /></span>
+										</dd>
+										<dt>Step 10</dt>
+										<dd>
+											<p>Now that you have installed python, we want to check whether there are any problems before starting the course! We should have provided those who have signed up a file called installation_test.py.
+												Open the file and run it with the green play button at the top right corner of VSCode:
+											</p>
+											<span class="image object"><img src="images/python_run.png" alt="" /></span>
+										</dd>
+									</dl>
+									
+									<p>If the file successfully runs, you're all set! If not, reread the instructions and see if you have missed anything. </p>
+									<p>If you are still unable to install after rereading the instructions, send us a description and/or an image to describe what went wrong and we will help you out!</p>
 								</section>
 
 						</div>
@@ -101,13 +124,6 @@
                 <div id="sidebar">
 						<div class="inner">
 
-							<!-- Search -->
-								<section id="search" class="alt">
-									<form method="post" action="#">
-										<input type="text" name="query" id="query" placeholder="Search" />
-									</form>
-								</section>
-
 							<!-- Menu -->
 								<nav id="menu">
 									<header class="major">
@@ -116,10 +132,9 @@
 									<ul>
                                         <li><a href="index.html">Homepage</a></li>
                                         <li><a href="installation.html">Installation</a></li>
-                                        <li><a href="variables.html">Variables</a></li>
+                                        <li><a href="variables.html">Functions and Variables</a></li>
 										<li><a href="datatypes.html">Datatypes</a></li>
-                                        <li><a href="functions.html">Functions</a></li>
-                                        <li><a href="conditionals.html">Conditionals</a></li>
+                                        <!-- <li><a href="conditionals.html">Conditionals</a></li>
                                         <li><a href="strings.html">Strings</a></li>
                                         <li><a href="loops.html">Loops</a></li>
                                         <li><a href="lists.html">Lists</a></li>
@@ -127,7 +142,16 @@
                                         <li><a href="oopy.html">Object Oriented Programming</a></li>
                                         <li><a href="graphics.html">Graphics</a></li>
                                         <li><a href="minimax.html">AI - minimax</a></li>
-                                        <li><a href="abpruning.html">AI - ab pruning</a></li>
+										<li><a href="abpruning.html">AI - ab pruning</a></li> -->
+										<li><span>Conditionals</span></li>
+										<li><span>Strings</span></li>
+										<li><span>Loops</span></li>
+										<li><span>Lists</span></li>
+										<li><span>Dictionary</span></li>
+										<li><span>Object Oriented Programming</span></li>
+										<li><span>Graphics</span></li>
+										<li><span>AI - minimax</span></li>
+										<li><span>AI - ab pruning</span></li>
 									</ul>
 								</nav>
 
