--- a/datatypes.html
+++ b/datatypes.html
@@ -190,13 +190,6 @@ print(yes() or crash())  # prints True without even looking at crash()
                 <div id="sidebar">
 						<div class="inner">
 
-							<!-- Search -->
-								<section id="search" class="alt">
-									<form method="post" action="#">
-										<input type="text" name="query" id="query" placeholder="Search" />
-									</form>
-								</section>
-
 							<!-- Menu -->
 								<nav id="menu">
 									<header class="major">
@@ -205,10 +198,10 @@ print(yes() or crash())  # prints True without even looking at crash()
 									<ul>
                                         <li><a href="index.html">Homepage</a></li>
                                         <li><a href="installation.html">Installation</a></li>
-                                        <li><a href="variables.html">Variables</a></li>
+                                        <li><a href="variables.html">Functions and Variables</a></li>
 										<li><a href="datatypes.html">Datatypes</a></li>
-                                        <li><a href="functions.html">Functions</a></li>
-                                        <li><a href="conditionals.html">Conditionals</a></li>
+                            
+                                        <!-- <li><a href="conditionals.html">Conditionals</a></li>
                                         <li><a href="strings.html">Strings</a></li>
                                         <li><a href="loops.html">Loops</a></li>
                                         <li><a href="lists.html">Lists</a></li>
@@ -216,7 +209,16 @@ print(yes() or crash())  # prints True without even looking at crash()
                                         <li><a href="oopy.html">Object Oriented Programming</a></li>
                                         <li><a href="graphics.html">Graphics</a></li>
                                         <li><a href="minimax.html">AI - minimax</a></li>
-                                        <li><a href="abpruning.html">AI - ab pruning</a></li>
+										<li><a href="abpruning.html">AI - ab pruning</a></li> -->
+										<li><span>Conditionals</span></li>
+										<li><span>Strings</span></li>
+										<li><span>Loops</span></li>
+										<li><span>Lists</span></li>
+										<li><span>Dictionary</span></li>
+										<li><span>Object Oriented Programming</span></li>
+										<li><span>Graphics</span></li>
+										<li><span>AI - minimax</span></li>
+										<li><span>AI - ab pruning</span></li>
 									</ul>
 								</nav>
 
@@ -228,9 +230,9 @@ print(yes() or crash())  # prints True without even looking at crash()
 									<p>Contact us with questions through wechat or emails!</p>
 									<ul class="contact">
 										<li class="icon solid fa-envelope"><a href="#">jessec1@andrew.cmu.edu</a></li>
-										<li class="icon solid fa-weixin">jzchan34</li>
+										<li class="icon solid fa-weixin">WeChatId: jzchan34</li>
 										<li class="icon solid fa-envelope"><a href="#">jerryl@andrew.cmu.edu</a></li>
-										<li class="icon solid fa-weixin">traumatized something</li>
+										<li class="icon solid fa-weixin">WeChatId: traumatizedpanda</li>
 									</ul>
 								</section>
 						</div>
