--- a/index.html
+++ b/index.html
@@ -52,13 +52,6 @@
 					<div id="sidebar">
 						<div class="inner">
 
-							<!-- Search -->
-								<section id="search" class="alt">
-									<form method="post" action="#">
-										<input type="text" name="query" id="query" placeholder="Search" />
-									</form>
-								</section>
-
 							<!-- Menu -->
 								<nav id="menu">
 									<header class="major">
@@ -67,10 +60,9 @@
 									<ul>
 										<li><a href="index.html">Homepage</a></li>
 										<li><a href="installation.html">Installation</a></li>
-										<li><a href="variables.html">Variables</a></li>
+										<li><a href="variables.html">Functions and Variables</a></li>
 										<li><a href="datatypes.html">Datatypes</a></li>
-										<li><a href="functions.html">Functions</a></li>
-										<li><a href="conditionals.html">Conditionals</a></li>
+										<!-- <li><a href="conditionals.html">Conditionals</a></li>
 										<li><a href="strings.html">Strings</a></li>
 										<li><a href="loops.html">Loops</a></li>
 										<li><a href="lists.html">Lists</a></li>
@@ -78,34 +70,18 @@
 										<li><a href="oopy.html">Object Oriented Programming</a></li>
 										<li><a href="graphics.html">Graphics</a></li>
 										<li><a href="minimax.html">AI - minimax</a></li>
-										<li><a href="minimax.html">AI - ab pruning</a></li>
-	
-										<li>
-											<span class="opener">Submenu</span>
-											<ul>
-												<li><a href="#">Lorem Dolor</a></li>
-												<li><a href="#">Ipsum Adipiscing</a></li>
-												<li><a href="#">Tempus Magna</a></li>
-												<li><a href="#">Feugiat Veroeros</a></li>
-											</ul>
-										</li>
-										<li><a href="#">Etiam Dolore</a></li>
-										<li><a href="#">Adipiscing</a></li>
-										<li>
-											<span class="opener">Another Submenu</span>
-											<ul>
-												<li><a href="#">Lorem Dolor</a></li>
-												<li><a href="#">Ipsum Adipiscing</a></li>
-												<li><a href="#">Tempus Magna</a></li>
-												<li><a href="#">Feugiat Veroeros</a></li>
-											</ul>
-										</li>
-										<li><a href="#">Maximus Erat</a></li>
-										<li><a href="#">Sapien Mauris</a></li>
-										<li><a href="#">Amet Lacinia</a></li>
+										<li><a href="minimax.html">AI - ab pruning</a></li> -->
+										<li><span>Conditionals</span></li>
+										<li><span>Strings</span></li>
+										<li><span>Loops</span></li>
+										<li><span>Lists</span></li>
+										<li><span>Dictionary</span></li>
+										<li><span>Object Oriented Programming</span></li>
+										<li><span>Graphics</span></li>
+										<li><span>AI - minimax</span></li>
+										<li><span>AI - ab pruning</span></li>
 									</ul>
 								</nav>
-
 							<!-- Section -->
 								<section>
 									<header class="major">
@@ -114,9 +90,9 @@
 									<p>Contact us with questions through wechat or emails!</p>
 									<ul class="contact">
 										<li class="icon solid fa-envelope"><a href="#">jessec1@andrew.cmu.edu</a></li>
-										<li class="icon solid fa-weixin">jzchan34</li>
+										<li class="icon solid fa-weixin">WeChatId: jzchan34</li>
 										<li class="icon solid fa-envelope"><a href="#">jerryl@andrew.cmu.edu</a></li>
-										<li class="icon solid fa-weixin">traumatizedpanda</li>
+										<li class="icon solid fa-weixin">WeChatId: traumatizedpanda</li>
 									</ul>
 								</section>
 						</div>
