--- a/loops.html
+++ b/loops.html
@@ -178,13 +178,6 @@ print(nth_prime(3))
                 <div id="sidebar">
 						<div class="inner">
 
-							<!-- Search -->
-								<section id="search" class="alt">
-									<form method="post" action="#">
-										<input type="text" name="query" id="query" placeholder="Search" />
-									</form>
-								</section>
-
 							<!-- Menu -->
 								<nav id="menu">
 									<header class="major">
@@ -215,10 +208,10 @@ print(nth_prime(3))
 									</header>
 									<p>Contact us with questions through wechat or emails!</p>
 									<ul class="contact">
-										<li class="icon solid fa-envelope"><a href="#">jessec1@andrew.cmu.edu</a></li>
-										<li class="icon solid fa-weixin">jzchan34</li>
+                                        <li class="icon solid fa-envelope"><a href="#">jessec1@andrew.cmu.edu</a></li>
+										<li class="icon solid fa-weixin">WeChatId: jzchan34</li>
 										<li class="icon solid fa-envelope"><a href="#">jerryl@andrew.cmu.edu</a></li>
-										<li class="icon solid fa-weixin">traumatized something</li>
+										<li class="icon solid fa-weixin">WeChatId: traumatizedpanda</li>
 									</ul>
 								</section>
 						</div>
