--- a/installation.html
+++ b/installation.html
@@ -165,7 +165,7 @@
 										<li class="icon solid fa-envelope"><a href="#">jessec1@andrew.cmu.edu</a></li>
 										<li class="icon solid fa-weixin">jzchan34</li>
 										<li class="icon solid fa-envelope"><a href="#">jerryl@andrew.cmu.edu</a></li>
-										<li class="icon solid fa-weixin">traumatized something</li>
+										<li class="icon solid fa-weixin">traumatizedpanda</li>
 									</ul>
 								</section>
 						</div>
