--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 											Our actual classes will be much less brutal and much more interactive.
 										</p>
 										<p>We hope to see you in class soon!</p>
-										<video controls width="device-width, initial-scale=1, user-scalable=no">
+										<video controls width="700, initial-scale=1, user-scalable=no">
 									
 											<source src="OCR Video.mp4"
 													type="video/mp4">
@@ -110,29 +110,6 @@
 										<li><a href="minimax.html">AI - minimax</a></li>
 										<li><a href="minimax.html">AI - ab pruning</a></li>
 	
-										<li>
-											<span class="opener">Submenu</span>
-											<ul>
-												<li><a href="#">Lorem Dolor</a></li>
-												<li><a href="#">Ipsum Adipiscing</a></li>
-												<li><a href="#">Tempus Magna</a></li>
-												<li><a href="#">Feugiat Veroeros</a></li>
-											</ul>
-										</li>
-										<li><a href="#">Etiam Dolore</a></li>
-										<li><a href="#">Adipiscing</a></li>
-										<li>
-											<span class="opener">Another Submenu</span>
-											<ul>
-												<li><a href="#">Lorem Dolor</a></li>
-												<li><a href="#">Ipsum Adipiscing</a></li>
-												<li><a href="#">Tempus Magna</a></li>
-												<li><a href="#">Feugiat Veroeros</a></li>
-											</ul>
-										</li>
-										<li><a href="#">Maximus Erat</a></li>
-										<li><a href="#">Sapien Mauris</a></li>
-										<li><a href="#">Amet Lacinia</a></li>
 									</ul>
 								</nav>
 
