--- a/future_chapters/dictionary.html
+++ b/future_chapters/dictionary.html
@@ -192,9 +192,9 @@ print(appearances(L))
 									<p>Contact us with questions through wechat or emails!</p>
 									<ul class="contact">
 										<li class="icon solid fa-envelope"><a href="#">jessec1@andrew.cmu.edu</a></li>
-										<li class="icon solid fa-weixin">WeChatId: jzchan34</li>
+										<li class="icon solid fa-comment-alt">WeChatId: jzchan34</li>
 										<li class="icon solid fa-envelope"><a href="#">jerryl@andrew.cmu.edu</a></li>
-										<li class="icon solid fa-weixin">WeChatId: traumatizedpanda</li>
+										<li class="icon solid fa-comment-alt">WeChatId: traumatizedpanda</li>
 									</ul>
 								</section>
 						</div>
