--- a/lists.html
+++ b/lists.html
@@ -28,32 +28,167 @@
 							<!-- Content -->
 								<section>
 									<header class="main">
-										<h1>Datatypes and Operations</h1>
+										<h1>Lists</h1>
 									</header>
 
-									<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
+									<hr class="major" />
 
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit.</p>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
-									<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+									<h2>Introduction</h2>
+									<p>Lists are a <b>collection</b> of datatypes that have an <b>order</b>. 
+										The order is given by what is known as an index, where the count starts from 0 (First element is at index 0).
+									</p>
+									<p>Here are how to initialize a list, using square brackets []</p>
+
+<pre><code># An Empty List 
+a = []
+#a[0] would crash because there are no elements
+</code></pre>
+
+<pre><code># A Singleton List
+a = ["hello"]
+b = [5]
+c = [True]
+#a, b, and c are all singleton lists
+a[0] == "hello"
+b[0] == 5
+c[0] == True
+</code></pre>
+
+<pre><code># Multiple Element List
+#Note that you can include different datatypes in the same list
+a = ["hello", 5, True] 
+
+a[0] == "hello"
+a[1] == 5
+a[2] == True
+</code></pre>
+
+<pre><code># Creating lists of variable length
+
+a = [None] * 4
+# a would be [None, None, None, None]
+
+b = list(range(8)) #note range itself is not a list
+# b would be [0, 1, 2, 3, 4, 5, 6, 7]
+
+c = list("hello")
+# c would be ["h", "e", "l", "l","o"]
+</code></pre>
+
+					<p>List comprehension is a powerful tool in creating lists of variable length.
+						You will do this with a for loop inside []
+					</p>
+<pre><code>a = ["hi" for i in range(3)]
+# a would be ["hi", "hi", "hi"]
+
+b = [[None] * 3 for i in range(3)]
+
+# b would be [[None, None, None],
+		[None, None, None],
+		[None, None, None]]
+
+# b is what is known as a 2D list
+
+# note how this can be related to a chess board (hint hint...)
+</code></pre>
+									<hr class="major" />
+									<h2>Indexing and Slicing</h2>
+									<p>Indexing and Slicing in lists is similar to strings.
+										Indexing is when you access one element of the list. Slicing is when you access a range of elements between a start and end index.</p>
+
+<pre><code>a = ["Hello", True, 5]
+a[0] == "Hello"
+a[1] == True
+a[2] == 5
+
+#Note the first index is inclusive and the last index is exclusive
+a[0:1] == ["Hello"]
+a[1:3] == [True, 5]
+</code></pre>
+									<p>One special property of lists is that it is mutable. Note that in the String chapter we said that strings are immutable, meaning that you can index and
+										read from the string but you cannot change the character at the index directly. In Lists you are able to change the element at the index directly.
+									</p>
+<pre><code>a = ["Hello", True, 5]
+
+#This writes a new element at index 0 (Note how this is similar to assigning a variable)
+a[0] = "Bye"
+print(a) # a is now ["Bye", True, 5]
+
+a[1] = False
+print(a) # a is now ["Bye", False, 5]
+</code></pre>
 
 									<hr class="major" />
 
-									<h2>Interdum sed dapibus</h2>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit.</p>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+									<h2>Operations</h2>
+									<p>Here are some of the most common operations on a list, which are <b>len()</b>, <b>max()</b>, <b>min()</b> and <b>sum()</b></p>
+									<h3>Basic Operation</h3>
+<pre><code>a = ["hello", 5, True]
+len(a) == 3
 
-									<hr class="major" />
+b = [2, 4, 5, -4]
+max(b) == 5
+min(b) == -4
+sum(b) == 7
+</code></pre>
+									<h3>Finding Operation</h3>
+									<p>These operation allow you to check for where an element is in a list or not. The two main operations are <b>in</b> and <b>not in</b></p>
+<pre><code>a = ["hello", 5, True]
 
-									<h2>Magna etiam veroeros</h2>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
-									<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+"hello" in a == True #note how the expression evaluates to a boolean
+8 in a == False
 
-									<hr class="major" />
+"hello" not in a == False
+8 not in a == True
+</code></pre>
+									<h3>Adding Operation</h3>
+									<p>These operations allow you to add to a list, which also allows you to build variable length list</p>
+									<p>But first, lets discuss the difference between <b>destructive</b> and <b>non-destructive</b> operations. <b>Destructive</b> operations on a list change
+										the original list while <b>non-destructive</b> operations create a new copy of the list while doing the operation (this means the original list stays the same).
+										For example, assigning a value like a[0] = "hello" is destructive because it changes a. We will see further examples below.
+									</p>
+									<p>This first operation is called <b>.append()</b>, which adds an element to the end of the list <b>destructively</b></p>
+<pre><code>a = ["This", "is", "a"]
+a.append("list") #Note how the appending element is a string and not a list
+print(a) # a would be ["This", "is", "a", "list"]
 
-									<h2>Lorem aliquam bibendum</h2>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit.</p>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
+a.append(["list"]) #if we append a list we would get a 2D list
+print(a) # a would be ["This", "is", "a", "list", ["list"]]
+</code></pre>
+									<p>These two operations (<b>.extend()</b> and <b>+=</b>) are similar and both extends a list with another list <b>destructively</b>. Note that extending a singleton would have the same effect as append</p>
+<pre><code>a = ["This", "is"]
+a += ["a", "list"]
+print(a) # a would be ["This", "is", "a", "list"]
+
+a.extend(["a", "list"])
+print(a) # a would be ["This", "is", "a", "list", "a", "list"]
+</code></pre>
+									<p>Note how the above two operations are <b>destructive</b> as they change the original list a. Now I will introduce a <b>non-destructive</b> version of extend/+=</p>
+<pre><code>a = ["This", "is"]
+b = a + ["a", "list"]
+print(a) #note how a is unchanged, it is still ["This", "is"]
+print(b) # b should print ["This", "is", "a", "list"]
+</code></pre>
+									<h3>Deleting Operations</h3>
+									<p>Here are the <b>destructive</b> deletion operations <b>.remove()</b> and <b>.pop()</b>. The <b>.remove()</b> method takes in an element and removes the first occurance of the element in the list. The <b>.pop()</b> method takes in an index and delete the element at that index in the list.
+									<b>.remove()</b> doesn't have a return value, but <b>.pop()</b> returns the value it popped</p>
+<pre><code>calendar = ["event 1", "event 2", "event 3", "event 2"]
+calendar.remove("event 2")
+print(calendar) #calendar would print ["event 1", "event 3", "event 2"]
+calendar.remove("event 2")
+print(calendar) #calendar would print ["event 1", "event 3"]
+
+calendar_2 = ["event 1", "event 2", "event 3"]
+first = calendar_2.pop(0) 
+print(calendar_2) #calendar 2 would print ["event 2", "event 3"]
+print(first) # prints "event 1"
+
+# note that when you don't give a value to .pop() it pops the last element in the list
+third = calendar_2.pop()
+print(calendar_2) #calendar 2 would print ["event 2"]
+print(third) # prints "event 3"
+</code></pre>
+
 
 								</section>
 
@@ -65,41 +200,40 @@
 						<div class="inner">
 
 							<!-- Menu -->
-								<nav id="menu">
-									<header class="major">
-										<h2>Menu</h2>
-									</header>
-									<ul>
-                                        <li><a href="index.html">Homepage</a></li>
-                                        <li><a href="installation.html">Installation</a></li>
-                                        <li><a href="variables.html">Variables</a></li>
-										<li><a href="datatypes.html">Datatypes</a></li>
-                                        <li><a href="functions.html">Functions</a></li>
-                                        <li><a href="conditionals.html">Conditionals</a></li>
-                                        <li><a href="strings.html">Strings</a></li>
-                                        <li><a href="loops.html">Loops</a></li>
-                                        <li><a href="lists.html">Lists</a></li>
-                                        <li><a href="dictionary.html">Dictionary</a></li>
-                                        <li><a href="oopy.html">Object Oriented Programming</a></li>
-                                        <li><a href="graphics.html">Graphics</a></li>
-                                        <li><a href="minimax.html">AI - minimax</a></li>
-                                        <li><a href="abpruning.html">AI - ab pruning</a></li>
-									</ul>
-								</nav>
+							<nav id="menu">
+								<header class="major">
+									<h2>Menu</h2>
+								</header>
+								<ul>
+									<li><a href="index.html">Homepage</a></li>
+									<li><a href="installation.html">Installation</a></li>
+									<li><a href="datatypes.html">Datatypes</a></li>
+									<li><a href="variables.html">Functions & Variables</a></li>
+									<li><a href="conditionals.html">Conditionals</a></li>
+									<li><a href="loops.html">Loops</a></li>
+									<li><a href="strings.html">Strings</a></li>
+									<li><a href="lists.html">Lists</a></li>
+									<li><a href="dictionary.html">Dictionary</a></li>
+									<li><a href="oopy.html">Object Oriented Programming</a></li>
+									<li><a href="graphics.html">Graphics</a></li>
+									<li><a href="minimax.html">AI - minimax</a></li>
+									<li><a href="abpruning.html">AI - ab pruning</a></li>
+								</ul>
+							</nav>
 
-							<!-- Section -->
-								<section>
-									<header class="major">
-										<h2>Get in touch</h2>
-									</header>
-									<p>Contact us with questions through wechat or emails!</p>
-									<ul class="contact">
-										<li class="icon solid fa-envelope"><a href="#">jessec1@andrew.cmu.edu</a></li>
-										<li class="icon solid fa-weixin">jzchan34</li>
-										<li class="icon solid fa-envelope"><a href="#">jerryl@andrew.cmu.edu</a></li>
-										<li class="icon solid fa-weixin">traumatized something</li>
-									</ul>
-								</section>
+						<!-- Section -->
+							<section>
+								<header class="major">
+									<h2>Get in touch</h2>
+								</header>
+								<p>Contact us with questions through wechat or emails!</p>
+								<ul class="contact">
+									<li class="icon solid fa-envelope"><a href="#">jessec1@andrew.cmu.edu</a></li>
+									<li class="icon solid fa-comment-alt">jzchan34</li>
+									<li class="icon solid fa-envelope"><a href="#">jerryl@andrew.cmu.edu</a></li>
+									<li class="icon solid fa-comment-alt">traumatizedpanda</li>
+								</ul>
+							</section>
 						</div>
 					</div>
 
